# langchain-graphrag

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  DEVCONTAINER_MIGRATION.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-docs.txt  requirements.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/rye/: devcontainer-feature.json  install.sh
.github/workflows/: publish.yml
docs/: index.md  overview.md
docs/architecture/: overview.md
docs/guides/: data_flow_examples.md  indexing_pipeline.md  query_system.md  text_units_extraction.ipynb
docs/guides/graph_extraction/: er_extraction.ipynb  graph_generator.ipynb  index.md
docs/guides/graph_extraction/sample-data/: base_text_units.parquet
examples/: requirements_app.txt
examples/app/: main.py
examples/app/configs/: indexing.yaml
examples/app/configs/data/: default.yaml
examples/app/configs/entity_extractor/: default.yaml
examples/app/configs/entity_summarizer/: default.yaml
examples/app/configs/experiment/: azure_openai_gpt4o.yaml  gemma2_27b.yaml  gemma2_9b.yaml
examples/app/configs/hydra/: default.yaml
examples/app/configs/indexer/: default.yaml
examples/app/configs/llms/: azure_openai_embedding.yaml  ollama.yaml  openai_chat.yaml  openai_embedding.yaml
examples/app/configs/paths/: default.yaml
examples/input-data/: book.txt
examples/prompts/: community_report.txt  entity_extraction.txt  summarize_descriptions.txt
examples/simple-app/: .env.example  README.md  pyproject.toml  requirements.txt
examples/simple-app/app/: __init__.py  common.py  indexer.py  main.py  query.py
examples/sophisticated-app/: .env.example  README.md  pyproject.toml  requirements.txt
examples/sophisticated-app/app/: __init__.py  main.py
examples/sophisticated-app/app/configs/: app.yaml  indexing.yaml
examples/sophisticated-app/app/configs/communities_table_generator/: default.yaml
examples/sophisticated-app/app/configs/embedding_models/: azure_openai.yaml  ollama.yaml  openai_embedding.yaml
examples/sophisticated-app/app/configs/entities_table_generator/: default.yaml
examples/sophisticated-app/app/configs/entity_generator/: default.yaml
examples/sophisticated-app/app/configs/entity_summarizer/: default.yaml
examples/sophisticated-app/app/configs/experiment/: azure_openai_gpt4o.yaml  gemma2_27b.yaml  openai_gpt4mini.yaml
examples/sophisticated-app/app/configs/graph_embedding/: default.yaml
examples/sophisticated-app/app/configs/indexer/: default.yaml
examples/sophisticated-app/app/configs/indexing/embedding_generation/: entity.yaml  graph.yaml  relationship.yaml
examples/sophisticated-app/app/configs/indexing/entity_embedding/: default.yaml
examples/sophisticated-app/app/configs/indexing/experiment/: azure_openai_gpt4o.yaml  gemma2_27b.yaml  gemma2_9b.yaml  openai_gpt4mini.yaml
examples/sophisticated-app/app/configs/indexing/graph_clustering/: default.yaml
examples/sophisticated-app/app/configs/indexing/graph_generation/: er_description_summarizer.yaml  er_extractor.yaml  generator.yaml
examples/sophisticated-app/app/configs/indexing/indexer/: default.yaml
examples/sophisticated-app/app/configs/indexing/report_generation/: generator.yaml
examples/sophisticated-app/app/configs/indexing/table_generation/: reports.yaml  text_units.yaml
examples/sophisticated-app/app/configs/indexing/text_units/: default.yaml
examples/sophisticated-app/app/configs/indexing/vector_stores/: entities.yaml  relationships.yaml  text_units.yaml
examples/sophisticated-app/app/configs/llms/: azure_openai_chat.yaml  ollama.yaml
examples/sophisticated-app/app/configs/paths/: default.yaml
examples/sophisticated-app/app/configs/relationship_embedding/: default.yaml
examples/sophisticated-app/app/configs/relationships_table_generator/: default.yaml
examples/sophisticated-app/app/configs/table_generation/: communities.yaml
langchain_graphrag/graph_utils/layout/: zero_layout.py
langchain_graphrag/indexing/: __init__.py  create_final_communities.py  create_final_entities.py  create_final_relationships.py  indexer.py  test_create_final_communities.py  text_unit_extractor.py
langchain_graphrag/indexing/embedding_generation/: __init__.py
langchain_graphrag/indexing/embedding_generation/graph/: __init__.py
langchain_graphrag/indexing/entity_embedding/: __init__.py  embedding_generator.py
langchain_graphrag/indexing/entity_extraction/: __init__.py  extractor.py  graphs_merger.py  output_parser.py  prompt.py  test_graphs_merger.py
langchain_graphrag/indexing/entity_summarization/: summarizer.py  test_summarizer.py
langchain_graphrag/indexing/graph_clustering/: __init__.py  community_detector.py
langchain_graphrag/indexing/graph_embedding/: node2vec.py
langchain_graphrag/indexing/graph_generation/: __init__.py
langchain_graphrag/indexing/graph_generation/entity_relationship_summarization/: prompt.py
langchain_graphrag/indexing/relationship_embedding/: __init__.py  embedding_generator.py
langchain_graphrag/indexing/table_generation/: __init__.py  entities.py  relationships.py
langchain_graphrag/utils/: __init__.py  stable_lcc.py  token_calculator.py
scripts/: gen_ref_pages.py  post-create.sh
src/langchain_graphrag/: __init__.py  protocols.py
src/langchain_graphrag/graph_utils/: __init__.py  stable_lcc.py
src/langchain_graphrag/graph_utils/layout/: __init__.py  node_position.py  positioned_graph.py  zero_layout.py
src/langchain_graphrag/indexing/: __init__.py  artifacts.py  indexer.py  simple_indexer.py  text_unit_extractor.py
src/langchain_graphrag/indexing/artifacts_generation/: __init__.py  entities.py  relationships.py  reports.py  text_units.py
src/langchain_graphrag/indexing/embedding_generation/: __init__.py  entity.py  relationship.py
src/langchain_graphrag/query/: __init__.py
src/langchain_graphrag/types/: __init__.py  prompts.py  tokens.py
src/langchain_graphrag/types/graphs/: __init__.py  (+2 more)
src/langchain_graphrag/utils/: __init__.py  token_counter.py  uuid.py
tests/: test_graphs_merger.py  test_summarizer.py
(+78 files in other folders)
