[project]
name = "langchain-graphrag"
version = "0.0.4"
description = "Implementation of GraphRAG (https://arxiv.org/pdf/2404.16130)"
authors = [{ name = "Kapil Sachdeva", email = "notan@email.com" }]
dependencies = [
    "pandas>=2.2.2",
    "networkx>=3.3",
    "langchain-core>=0.2.27",
    "langchain-text-splitters>=0.2.2",
    "graspologic>=3.4.1",
    "tableprint>=0.9.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "ipykernel>=6.29.5",
    "types-networkx>=3.2.1.20240811",
    "types-tqdm>=4.66.0.20240417",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.2",
    "markdown-include>=0.8.1",
    "pre-commit>=3.8.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-section-index>=0.3.9",
    "mkdocs-material>=9.5.31",
    "mkdocs-jupyter>=0.24.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_graphrag"]

[tool.rye.workspace]
members = ["langchain_graphrag", "examples/simple-app"]

[tool.rye.scripts]
simple-app-indexer = "python examples/simple-app/app/main.py indexer index --input-file examples/input-data/book.txt --output-dir tmp --cache-dir tmp/cache"
simple-app-report = "python examples/simple-app/app/main.py indexer report"
simple-app-local-search = "python examples/simple-app/app/main.py query local-search --output-dir tmp --cache-dir tmp/cache"
simple-app-global-search = "python examples/simple-app/app/main.py query global-search --output-dir tmp --cache-dir tmp/cache"

[tool.isort]
profile = "black"
